# scripts

./: azure-pipelines-1.yml  azure-pipelines.yml  scrapeTopGolf.py
repoScaffold/: prompt.md  promptToPrompt.md  pyproject.toml
repoScaffold/examples/: ai4us2.yaml  crud_app.yaml
repoScaffold/src/platform_cli/: __init__.py  __main__.py  cli.py
repoScaffold/src/platform_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
repoScaffold/src/platform_cli/commands/: create_agent_identity.py  install.py  scaffold.py  test_cmd.py
repoScaffold/src/platform_cli/engine/: context.py  dag.py  registry.py  runner.py  state.py  step.py
repoScaffold/src/platform_cli/manifest/: defaults.py  loader.py  schema.py
repoScaffold/src/platform_cli/shell/: run.py  tools.py
repoScaffold/src/platform_cli/steps/: __init__.py  phase_a_tools.py  phase_b_scaffold.py  phase_c_database.py  phase_d_api.py  phase_e_frontend.py  phase_f_worker.py  phase_g_gcp.py  phase_h_secrets.py  phase_i_cloudbuild.py  phase_j_terraform.py  phase_k_testing.py
repoScaffold/src/platform_cli/templates/: filters.py  renderer.py
repoScaffold/templates/agents/: github-app-token.sh
repoScaffold/templates/claude/: settings.json.j2
repoScaffold/templates/cloudbuild/: api.yaml.j2  terraform.yaml.j2  web.yaml.j2
repoScaffold/templates/cloudrun/: api.yaml.j2  web.yaml.j2
repoScaffold/templates/project/: .env.example.j2  .gitignore.j2  AGENTS.md.j2  README.md.j2  docker-compose.yml.j2  loop.sh.j2  setup-vm.sh.j2
repoScaffold/templates/vscode/: launch.json.j2  tasks.json.j2
(+64 files in other folders)
