[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platform-cli"
version = "0.1.0"
description = "CLI to scaffold, provision, test, and deploy full-stack apps on GCP"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
platform-cli = "platform_cli.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
platform_cli = ["../templates/**/*.j2"]
